# pinochle-again

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO  actions.json  fly.toml  inprogress.txt  savedgame.json
.github/workflows/: docker-image.yml
cli/: Cargo.toml
cli/src/: main.rs
saved_games/: first_game.b64
saved_games/first_game/: actions.json  players.json  seed.json
saved_games/test/: actions.json  seed.json
server/: Cargo.toml
server/src/: main.rs
src/: ai.rs  main.rs  pinochle.rs  steps.json
www/: package-lock.json  package.json
www/public/: index.html
www/src/: App.css  App.tsx  Card.css  Card.tsx  Controls.css  Controls.tsx  DevTools.tsx  Hand.css  Hand.tsx  JoinGame.css  JoinGame.tsx  PlayGame.tsx  PlayerName.tsx  Rules.css  Rules.tsx  index.tsx  model.ts
