[package]
name = "pinochle-again"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enum-iterator = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
actix-web = "*"
actix-cors = "*"