[package]
name = "pinochle-server"
version = "0.1.0"
edition = "2021"
default-run = "pinochle-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enum-iterator = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
actix-web = "*"
actix-cors = "*"
actix-files = "*"
itertools = "*"
ordered-float = { version = "3.0", default-features = false }
pinochle = { path = "../library" }
base64 = "*"
bitvec = "*"